{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 162,
  "lineage": "99343896-03c0-963b-96dd-3bc6aa65798f",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:internet-gateway/igw-066ee048da5e0876f",
            "id": "igw-066ee048da5e0876f",
            "owner_id": "103670753244",
            "tags": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-igw",
              "Owner": "Development Team",
              "Type": "networking"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-igw",
              "Owner": "Development Team",
              "Type": "networking"
            },
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:route-table/rtb-046f26169cbc4ac5c",
            "id": "rtb-046f26169cbc4ac5c",
            "owner_id": "103670753244",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AZ": "us-east-1a",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-private-rt-1",
              "Owner": "Development Team",
              "Type": "route-table"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-private-rt-1",
              "Owner": "Development Team",
              "Type": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:route-table/rtb-024770fafb3b68788",
            "id": "rtb-024770fafb3b68788",
            "owner_id": "103670753244",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AZ": "us-east-1b",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-private-rt-2",
              "Owner": "Development Team",
              "Type": "route-table"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-private-rt-2",
              "Owner": "Development Team",
              "Type": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:route-table/rtb-0be64071885c7f2da",
            "id": "rtb-0be64071885c7f2da",
            "owner_id": "103670753244",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066ee048da5e0876f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-public-rt",
              "Owner": "Development Team",
              "Type": "route-table"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-public-rt",
              "Owner": "Development Team",
              "Type": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d3a6e7a76813ea",
            "route_table_id": "rtb-046f26169cbc4ac5c",
            "subnet_id": "subnet-0a8192a723e8a60eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0437d18081732727a",
            "route_table_id": "rtb-024770fafb3b68788",
            "subnet_id": "subnet-0e4e7b654bdd0f01d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e87e77370131c88",
            "route_table_id": "rtb-0be64071885c7f2da",
            "subnet_id": "subnet-0fa23d712262da614"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d4fbf0aa299a280",
            "route_table_id": "rtb-0be64071885c7f2da",
            "subnet_id": "subnet-0a82ad46c64d7ea64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:security-group/sg-0497609a0f427f6dc",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0497609a0f427f6dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dagri-talk-dev-alb-20250718113238281500000001",
            "name_prefix": "dagri-talk-dev-alb-",
            "owner_id": "103670753244",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-alb-sg",
              "Owner": "Development Team",
              "Type": "security-group"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-alb-sg",
              "Owner": "Development Team",
              "Type": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:security-group/sg-0074ba622b59500cd",
            "description": "Security group for RDS database",
            "egress": [],
            "id": "sg-0074ba622b59500cd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-070a1e51840d3db49"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dagri-talk-dev-db-20250718113248953100000004",
            "name_prefix": "dagri-talk-dev-db-",
            "owner_id": "103670753244",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-db-sg",
              "Owner": "Development Team",
              "Type": "security-group"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-db-sg",
              "Owner": "Development Team",
              "Type": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_security_group.ecs_service",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:security-group/sg-070a1e51840d3db49",
            "description": "Security group for ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070a1e51840d3db49",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0497609a0f427f6dc"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "dagri-talk-dev-ecs-20250718113244063900000003",
            "name_prefix": "dagri-talk-dev-ecs-",
            "owner_id": "103670753244",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-ecs-sg",
              "Owner": "Development Team",
              "Type": "security-group"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-ecs-sg",
              "Owner": "Development Team",
              "Type": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:subnet/subnet-0a8192a723e8a60eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8192a723e8a60eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103670753244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-private-subnet-1",
              "Owner": "Development Team",
              "Type": "private-subnet"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-private-subnet-1",
              "Owner": "Development Team",
              "Type": "private-subnet"
            },
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:subnet/subnet-0e4e7b654bdd0f01d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4e7b654bdd0f01d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103670753244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-private-subnet-2",
              "Owner": "Development Team",
              "Type": "private-subnet"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-private-subnet-2",
              "Owner": "Development Team",
              "Type": "private-subnet"
            },
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:subnet/subnet-0fa23d712262da614",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa23d712262da614",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "103670753244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-public-subnet-us-east-1a",
              "Owner": "Development Team",
              "Type": "public-subnet"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-public-subnet-us-east-1a",
              "Owner": "Development Team",
              "Type": "public-subnet"
            },
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:subnet/subnet-0a82ad46c64d7ea64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a82ad46c64d7ea64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "103670753244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-public-subnet-us-east-1b",
              "Owner": "Development Team",
              "Type": "public-subnet"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-public-subnet-us-east-1b",
              "Owner": "Development Team",
              "Type": "public-subnet"
            },
            "vpc_id": "vpc-0da87d380b974aff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103670753244:vpc/vpc-0da87d380b974aff0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fea94dc3f19a08d",
            "default_route_table_id": "rtb-06bae426b4ba50296",
            "default_security_group_id": "sg-0844d61700abb8fbe",
            "dhcp_options_id": "dopt-0d460cf6ac0013561",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da87d380b974aff0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06bae426b4ba50296",
            "owner_id": "103670753244",
            "tags": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-vpc",
              "Owner": "Development Team",
              "Type": "networking"
            },
            "tags_all": {
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dagri-talk-dev-vpc",
              "Owner": "Development Team",
              "Type": "networking"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}